# Unix-Shell

./: .gitignore  CMakeLists.txt  README.md
include/: parse.h  parse_buffer.h  shell.h  str.h  vector.h
scripts/: debug.sh  intellisense.sh  release.sh
src/: CMakeLists.txt  main.c  parse.c  parse_buffer.c  shell.c  str.c  vector.c
tests/: string_tests.c  vector_tests.c
